utilities/scale-json/src/snapshots/scale_json__test__insta_tests__byte_array.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "BytesArray": "0xcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcf"
  }
}
