utilities/scale-json/src/snapshots/scale_json__test__insta_tests__byte_vec_empty.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "ByteVec": []
  }
}
