utilities/scale-json/src/snapshots/scale_json__test__insta_tests__eth_instance.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "Ethereum": {
      "inner": "Usdc"
    }
  }
}
