utilities/scale-json/src/snapshots/scale_json__test__insta_tests__tuple.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "Tuple": [
      42,
      "hello",
      true
    ]
  }
}
