utilities/scale-json/src/snapshots/scale_json__test__insta_tests__value.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "Value": 42
  }
}
